--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,7 @@
 backend:
-  name: git-gateway
+  name: auth0
+  domain: dev-ledqz606i2aipjyh.us.auth0.com     # replace with Auth0 domain
+  client_id: JPeiSOBKOrGZQmKywY8bn9TU2OfXqjwY # replace with Auth0 client ID  
   branch: main  # your branch name
 
 media_folder: "assets/uploads"    # where images are stored
