updating the _config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+include:
+  - admin
+
+
 title:              عافيتك
 email:              
 description:         منشورات و مواضيع متنوعة تساهم في تحسين  حياتك و صحتك
