--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email:
 description:         منشورات و مواضيع متنوعة تساهم في تحسين  حياتك و صحتك
 author:             Afytk
 baseurl:            ""                  # empty for root deploy
-url:                "https://afytkblog.netlify.app"
+url:                "https://Bassel-Mohammed.github.io"
 
 # Social Profiles
 twitter_username:   Aftyk_X
